--- a/app/src/main/res/layout/tab_indicator_add.xml
+++ b/app/src/main/res/layout/tab_indicator_add.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:background="#ffffffff"
-    android:gravity="center_horizontal|top"
+    android:gravity="center"
     android:orientation="vertical"
-    android:paddingBottom="3dp"
-    android:paddingTop="3dp">
+    android:paddingBottom="10dp">
 
     <ImageView
         android:id="@+id/icon_tab"
-        android:layout_marginTop="-10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/tab_add" />
