--- a/app/src/main/res/layout/loading_dialog_layout.xml
+++ b/app/src/main/res/layout/loading_dialog_layout.xml
@@ -9,6 +9,7 @@
     <ImageView
         android:id="@+id/loadingIv"
         android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"
         android:background="@anim/loading"/>
 
