--- a/app/src/main/res/layout/tab_indicator_add.xml
+++ b/app/src/main/res/layout/tab_indicator_add.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
     android:background="#ffffffff"
     android:gravity="center"
@@ -12,15 +12,5 @@
         android:id="@+id/icon_tab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
-    <!--<com.getbase.floatingactionbutton.AddFloatingActionButton-->
-        <!--android:id="@+id/semi_transparent"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--fab:fab_plusIconColor="@color/white"-->
-        <!--fab:fab_colorNormal="@color/blue_semi_transparent"-->
-        <!--fab:fab_colorPressed="@color/blue_semi_transparent_pressed"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--/>-->
 
 </LinearLayout>
