--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,9 @@
                 android:minHeight="50dp"
                 app:mNavButtonIcon="@mipmap/ic_launcher"
                 app:mRightButtonIcon="@mipmap/ic_launcher"
-                app:mTitle="@string/home" />
+                app:mTitle="@string/home"
+                app:mLogoIcon="@mipmap/ic_launcher"
+               />
 
             <FrameLayout
                 android:id="@android:id/tabcontent"
