--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,5 +13,15 @@
         android:layout_height="150dp"
         app:pager_animation="Accordion" />
 
+    <cn.bingoogolapple.badgeview.BGABadgeTextView
+        android:id="@+id/btv_home_test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:padding="5dp"
+        android:text="BGABadgeTextView"
+        android:textColor="@android:color/black"
+        app:badge_padding="5dp" />
+
 </LinearLayout>
 
