--- a/app/src/main/res/layout/tab_indicator.xml
+++ b/app/src/main/res/layout/tab_indicator.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
@@ -9,13 +10,17 @@
     android:paddingTop="5dp">
 
     <ImageView
-        android:id="@+id/icon_tab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    android:id="@+id/icon_tab"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" />
+
+    <!--<cn.bingoogolapple.badgeview.BGABadgeImageView-->
+        <!--android:id="@+id/icon_tab"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content" />-->
 
     <TextView
         android:id="@+id/text_indicator"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-       />
+        android:layout_height="wrap_content" />
 </LinearLayout>
