--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -4,4 +4,5 @@
     <item name="m_nav_button" type="id"/>
     <item name="m_right_button" type="id"/>
     <item name="m_right_text" type="id"/>
+    <item name="m_logo" type="id"/>
 </resources>
