--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="192dp"
     android:background="@color/main_color"
-    android:gravity="center_horizontal"
+    android:gravity="center_horizontal|bottom"
     android:orientation="vertical"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
@@ -11,8 +11,8 @@
         android:id="@+id/header"
         android:layout_width="66dp"
         android:layout_height="66dp"
-        android:layout_marginTop="56dp"
         android:scaleType="centerCrop"
+        android:layout_marginBottom="10dp"
         android:src="@mipmap/default_header" />
 
     <TextView
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:text="Header"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:layout_marginBottom="20dp"
         android:textColor="@android:color/white" />
 
     <LinearLayout
@@ -42,10 +43,10 @@
         <View
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.1"
+            android:layout_weight="0.01"
             android:background="@color/white"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp" />
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
 
         <TextView
             android:layout_width="0dp"
