--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -1,30 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
 
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_first_fragment"
-            android:icon="@mipmap/ic_launcher"
-            android:title="First" />
-        <item
-            android:id="@+id/nav_second_fragment"
-            android:icon="@mipmap/ic_launcher"
-            android:title="Second" />
-        <item
-            android:id="@+id/nav_third_fragment"
-            android:icon="@mipmap/ic_launcher"
-            android:title="Third" />
-    </group>
+        android:id="@+id/nav_first_fragment"
+        android:title="首页" />
+    <item
+        android:id="@+id/nav_second_fragment"
+        android:title="我的魔法院" />
+    <item
+        android:id="@+id/nav_third_fragment"
 
-    <item android:title="Sub items">
-        <menu>
-            <item
-                android:icon="@mipmap/ic_launcher"
-                android:title="Sub item 1" />
-            <item
-                android:icon="@mipmap/ic_launcher"
-                android:title="Sub item 2" />
-        </menu>
-    </item>
+        android:title="我的魔法师" />
+
+    <item
+        android:title="我的订单" />
+    <item
+        android:title="我的收藏" />
 
 </menu>
