--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:scrollbars="none"
     android:layout_height="match_parent"
     tools:context=".fragments.HomeFragment">
 
@@ -14,7 +15,7 @@
         <com.daimajia.slider.library.SliderLayout
             android:id="@+id/slider_layout"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="140dp"
             app:pager_animation="Accordion" />
 
         <LinearLayout
@@ -31,6 +32,10 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:clickable="true"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    app:contentPadding="5dp"
+                    android:layout_margin="@dimen/card_margin"
                     app:cardCornerRadius="5dp">
 
                     <ImageView
@@ -51,6 +56,7 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:clickable="true"
                     android:layout_weight="1"
                     app:cardCornerRadius="5dp">
 
@@ -66,6 +72,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
+                    android:clickable="true"
                     app:cardCornerRadius="5dp">
 
                     <ImageView
@@ -89,6 +96,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:clickable="true"
                 android:orientation="vertical">
 
                 <android.support.v7.widget.CardView
@@ -109,6 +117,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
+                    android:clickable="true"
                     app:cardCornerRadius="5dp">
 
                     <ImageView
@@ -130,6 +139,7 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:clickable="true"
                     app:cardCornerRadius="5dp">
 
                     <ImageView
