--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -6,6 +6,8 @@
     android:layout_gravity="center_horizontal"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="5dp"
+    app:cardPreventCornerOverlap="false"
+    app:cardUseCompatPadding="true"
     app:cardElevation="8dp">
     <com.marshalchen.ultimaterecyclerview.swipe.SwipeLayout
         android:id="@id/recyclerview_swipe"
