--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -7,30 +7,39 @@
 
 
     <declare-styleable name="MyTitleBar">
-        <attr name="mTitle" format="reference|string"/>
-        <attr name="mTitleSize" format="dimension|reference"/>
-        <attr name="mTitleTextColor" format="reference|color"/>
+        <attr name="mTitle" format="reference|string" />
+        <attr name="mTitleSize" format="dimension|reference" />
+        <attr name="mTitleTextColor" format="reference|color" />
 
-        <attr name="mLeftText" format="reference|string"/>
-        <attr name="mLeftTextSize" format="dimension|reference"/>
-        <attr name="mLeftTextColor" format="reference|color"/>
+        <attr name="mLeftText" format="reference|string" />
+        <attr name="mLeftTextSize" format="dimension|reference" />
+        <attr name="mLeftTextColor" format="reference|color" />
+        <attr name="mLeftTextRightDrawable" format="reference" />
+        <attr name="mLeftTextLeftDrawable" format="reference" />
+        <attr name="mLeftTextDrawablePadding" format="dimension" />
+        <attr name="mLeftTextMarginLeft" format="dimension|reference" />
 
-        <attr name="mRightText" format="reference|string"/>
-        <attr name="mRightTextSize" format="dimension|reference"/>
-        <attr name="mRightTextColor" format="reference|color"/>
-        <attr name="mRightButtonIcon" format="reference"/>
-        <attr name="mRightTextMarginRight" format="dimension|reference"/>
-        <attr name="mRightTextDrawable" format="reference"/>
+        <attr name="mRightText" format="reference|string" />
+        <attr name="mRightTextSize" format="dimension|reference" />
+        <attr name="mRightTextColor" format="reference|color" />
+        <attr name="mRightButtonIcon" format="reference" />
+        <attr name="mRightTextMarginRight" format="dimension|reference" />
+        <attr name="mRightTextRightDrawable" format="reference" />
+        <attr name="mRightTextLeftDrawable" format="reference" />
+        <attr name="mRightTextDrawablePadding" format="dimension" />
 
-        <attr name="mNavButtonIcon" format="reference"/>
+        <attr name="mNavButtonIcon" format="reference" />
 
-        <attr name="mLogoIcon" format="reference"/>
+        <attr name="mLogoIcon" format="reference" />
         <!--<attr name="mCircleLogo" format="boolean"/>-->
 
-        <attr name="mSearchViewDrwableLeft" format="reference"/>
-        <attr name="mSearchViewDrwableRight" format="reference"/>
-        <attr name="mSearchHintText" format="reference"/>
-        <attr name="mSearchHintTextColor" format="reference|color"/>
+        <attr name="mSearchViewDrawableLeft" format="reference" />
+        <attr name="mSearchViewDrawableRight" format="reference" />
+        <attr name="mSearchHintText" format="reference" />
+        <attr name="mSearchHintTextColor" format="reference|color" />
+
+
+        <attr name="mCustomView" format="reference" />
 
         <!--<attr name="border_width" format="dimension|reference" />-->
         <!--<attr name="border_color" format="reference|color" />-->
